fixing the file path problem